--- a/templates/WebApp/topbar.html
+++ b/templates/WebApp/topbar.html
@@ -1,11 +1,15 @@
-  <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+{% load static %}
+
+
+{% load socialaccount %}
+<nav class="navbar navbar-expand navbar-light bg-white topbar static-top shadow">
 
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
                     </button>
 
-
+<h1>Project Title</h1>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -39,33 +43,36 @@
 
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
-{#                                <img class="img-profile rounded-circle"#}
-{#                                    src="img/undraw_profile.svg">#}
-                            </a>
-                            <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Activity Log
-                                </a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
-                                </a>
-                            </div>
+
+
+                        {% if user.is_authenticated %}
+                            <p>Welcome, {{ user.username }} !</p>
+                            <p><a href="/accounts/logout/">Log Out</a></p>
+                        {% else %}
+                            <a href="{% provider_login_url 'google' %}">Login with Google</a>
+                        {% endif %}
+
+{#                            <!-- Dropdown - User Information -->#}
+{#                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"#}
+{#                                aria-labelledby="userDropdown">#}
+{#                                <a class="dropdown-item" href="#">#}
+{#                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>#}
+{#                                    Profile#}
+{#                                </a>#}
+{#                                <a class="dropdown-item" href="#">#}
+{#                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>#}
+{#                                    Settings#}
+{#                                </a>#}
+{#                                <a class="dropdown-item" href="#">#}
+{#                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>#}
+{#                                    Activity Log#}
+{#                                </a>#}
+{#                                <div class="dropdown-divider"></div>#}
+{#                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">#}
+{#                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>#}
+{#                                    Logout#}
+{#                                </a>#}
+{#                            </div>#}
                         </li>
 
                     </ul>
