update model, sample bootstrap form, search and export from admin

--- a/templates/WebApp/common.html
+++ b/templates/WebApp/common.html
@@ -58,6 +58,12 @@
             <i class="fas fa-fw fa-table"></i>
             <span>About</span></a>
     </li>
+        <!-- Nav Item - Tables -->
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'updates' %}">
+            <i class="fas fa-fw fa-table"></i>
+            <span>Update Model</span></a>
+    </li>
     <!-- Nav Item - Tables -->
     <li class="nav-item">
         <a class="nav-link" href="{% url 'feedback' %}">
@@ -84,7 +90,9 @@
          transform: rotate(-45deg);
     }
      .dropdown-btn i{
-        margin-left: 100px;
+        margin-right: 10px;
+         margin-top: 10px;
+         float: right;
     }
      .dropdown-btn:hover{
         color: white;
