--- a/templates/WebApp/map2.html
+++ b/templates/WebApp/map2.html
@@ -34,6 +34,8 @@
 
 <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
+     <script src="{% static '/js/L.Control.Opacity.js' %}"></script>
+        <link href="{% static '/css/L.Control.Opacity.css' %}" rel="stylesheet" />
 </head>
 <body id="page-top">
  <div id="wrapper">
