--- a/templates/WebApp/common.html
+++ b/templates/WebApp/common.html
@@ -58,12 +58,6 @@
             <i class="fas fa-fw fa-table"></i>
             <span>About</span></a>
     </li>
-        <!-- Nav Item - Tables -->
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'updates' %}">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Update Model</span></a>
-    </li>
     <!-- Nav Item - Tables -->
     <li class="nav-item">
         <a class="nav-link" href="{% url 'feedback' %}">
@@ -90,9 +84,7 @@
          transform: rotate(-45deg);
     }
      .dropdown-btn i{
-        margin-right: 10px;
-         margin-top: 10px;
-         float: right;
+        margin-left: 100px;
     }
      .dropdown-btn:hover{
         color: white;
