--- a/WebApp/static/css/basic.css
+++ b/WebApp/static/css/basic.css
@@ -562,6 +562,7 @@ pre code {
   .container, .container-sm {
     max-width: 540px;
   }
+
 }
 
 @media (min-width: 768px) {
@@ -11285,4 +11286,13 @@ footer.sticky-footer .copyright {
 
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
+}
+#welcome_block{
+    margin: auto;
+    padding-top: 20px;
+}
+
+.dropdown-menu .test{
+  top:30px;
+  z-index:20000;
 }
