--- a/templates/WebApp/common.html
+++ b/templates/WebApp/common.html
@@ -1,5 +1,17 @@
 {% load static %}
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TVBG7FLSBK"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
 
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'G-TVBG7FLSBK');
+</script>
 <!-- Sidebar -->
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
     <!-- Sidebar - Brand -->
@@ -25,30 +37,30 @@
     </div>
     <!-- Divider -->
     <hr class="sidebar-divider">
-     <li class="nav-item">
-   	<div class="nav-link dropdownSideBar">
-	    <a role="button" href="#" class="dropdown-btn font_white navi_map">
-			Maps<i class="fa-solid fa-chevron-right"></i>
-		  </a>
-		<div class="dropdown-container" id="dropdown-menu">
-		    <a class="dropdown-item" href="{% url 'map1' %}">WMS (fixed size)</a>
+    <li class="nav-item">
+        <div class="nav-link dropdownSideBar">
+            <a role="button" href="#" class="dropdown-btn font_white navi_map">
+                Maps<i class="fa-solid fa-chevron-right"></i>
+            </a>
+            <div class="dropdown-container" id="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'map1' %}">WMS (fixed size)</a>
 
-            <a class="dropdown-item" href="{% url 'map3' %}">WMS (full page)</a>
-            <a class="dropdown-item" href="{% url 'map2' %}">GEE content</a>
-		</div>
-	</div>
+                <a class="dropdown-item" href="{% url 'map3' %}">WMS (full page)</a>
+                <a class="dropdown-item" href="{% url 'map2' %}">GEE content</a>
+            </div>
+        </div>
     </li>
-        <li class="nav-item">
-   	<div class="nav-link dropdownSideBar">
-	    <a role="button" href="#" class="dropdown-btn font_white navi_chart">
-			Charts<i class="fa-solid fa-chevron-right"></i>
-		  </a>
-		<div class="dropdown-container" id="dropdown-menu">
-		  <a class="dropdown-item" href="{% url 'chart1' %}">NetCDF timeseries</a>
-          <a class="dropdown-item" href="{% url 'chart2' %}">ClimateSERV timeseries</a>
-          <a class="dropdown-item" href="{% url 'chart3' %}">SQLite timeseries</a>
-		</div>
-	</div>
+    <li class="nav-item">
+        <div class="nav-link dropdownSideBar">
+            <a role="button" href="#" class="dropdown-btn font_white navi_chart">
+                Charts<i class="fa-solid fa-chevron-right"></i>
+            </a>
+            <div class="dropdown-container" id="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'chart1' %}">NetCDF timeseries</a>
+                <a class="dropdown-item" href="{% url 'chart2' %}">ClimateSERV timeseries</a>
+                <a class="dropdown-item" href="{% url 'chart3' %}">SQLite timeseries</a>
+            </div>
+        </div>
     </li>
 
 
@@ -58,7 +70,7 @@
             <i class="fas fa-fw fa-table"></i>
             <span>About</span></a>
     </li>
-        <!-- Nav Item - Tables -->
+    <!-- Nav Item - Tables -->
     <li class="nav-item">
         <a class="nav-link" href="{% url 'updates' %}">
             <i class="fas fa-fw fa-table"></i>
@@ -81,52 +93,65 @@
 </ul>
 <!-- End of Sidebar -->
 <style>
-    .dropdown-btn{
+    .dropdown-btn {
         border: none;
         width: 100%;
         color: rgba(255, 255, 255, 0.8);
         padding-left: 15px;
-        {#background-color: #486edb;#}
-         transform: rotate(-45deg);
+    {#background-color: #486edb;#} transform: rotate(-45deg);
     }
-     .dropdown-btn i{
+
+    .dropdown-btn i {
         margin-right: 10px;
-         margin-top: 10px;
-         float: right;
+        margin-top: 10px;
+        float: right;
     }
-     .dropdown-btn:hover{
+
+    .dropdown-btn:hover {
         color: white;
-                 text-decoration: none;
+        text-decoration: none;
 
     }
 
-.rtoate180 {
-  transform: rotate(-270deg);
-}
+    .rtoate180 {
+        transform: rotate(-270deg);
+    }
 
-.dropdownSideBar.is-open .dropdown-btn:before {
-	transform: rotate(-360deg);
-	color: white;
-}
+    .dropdownSideBar.is-open .dropdown-btn:before {
+        transform: rotate(-360deg);
+        color: white;
+    }
 
-.dropdownSideBar.is-open .font_white {
-	width: 100%;
-	color: white;
-}
-.dropdownSideBar.is-open .dropdown-container {
-	display: block;
+    .dropdownSideBar.is-open .font_white {
+        width: 100%;
+        color: white;
+    }
 
-}
-/* hidden by default, make the content shifts under the title */
-.dropdown-container {
-	display: none;
-	padding: 10px;
-    margin: 10px;
-    text-align: center;
-	background-color: white;
-border-radius: 5% / 25%;
-}
-.dropdown-container a {color: black; font-size: small; text-align: center; padding: 5px;}
-.dropdown-container a:hover {text-decoration: none;}
+    .dropdownSideBar.is-open .dropdown-container {
+        display: block;
+
+    }
+
+    /* hidden by default, make the content shifts under the title */
+    .dropdown-container {
+        display: none;
+        padding: 10px;
+        margin: 10px;
+        text-align: center;
+        background-color: white;
+        border-radius: 5% / 25%;
+    }
+
+    .dropdown-container a {
+        color: black;
+        font-size: small;
+        text-align: center;
+        padding: 5px;
+    }
+
+    .dropdown-container a:hover {
+        text-decoration: none;
+    }
+
 </style>
 <script src="{% static '/js/sidebar.js' %}"></script>
