--- a/templates/WebApp/feedback.html
+++ b/templates/WebApp/feedback.html
@@ -14,14 +14,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="http://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/modules/data.js"></script>
-        <script src="https://code.highcharts.com/modules/series-label.js"></script>
-        <script src="https://code.highcharts.com/modules/exporting.js"></script>
-        <script src="https://code.highcharts.com/modules/export-data.js"></script>
-        <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
-        <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
         <link href="{% static '/css/basic.css' %}" rel="stylesheet">
     </head>
     <body id="page-top">
@@ -34,7 +26,7 @@
                     {% include "WebApp/topbar.html" %}
                      <div class="container-fluid">
                         <div class="row">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd10NFWUm6ZbuwYjafkFinR6DLGh1gVx3YwvpC-DSXLlWnSrg/viewform?embedded=true" width="640" height="949" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdpBjfXz9ETRiQnFgy4Y6eXKKQjwA1H6-c-qva_2VN_1vDQ6g/viewform?usp=sf_link" width="640" height="949" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                         </div>
                      </div>
                 </div>
