--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -2,140 +2,96 @@
 <html lang="en">
 {% load static %}
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- Custom fonts for this template-->
+    <!-- Custom fonts-->
     <link href="{% static '/css/all.min.css' %}" rel="stylesheet" type="text/css">
-            <link rel = "icon" href ="{% static '/images/logo.png' %}" type = "image/png">
-
+    <link rel="icon" href="{% static '/images/logo.png' %}" type="image/png">
     <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-        <title>SERVIR AppTemplate</title>
-
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+            rel="stylesheet">
+    <title>SERVIR AppTemplate</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Custom styles for this template-->
-<link href="{% static '/css/basic.css' %}" rel="stylesheet">
-<style>
+    <!-- Custom styles-->
+    <link href="{% static '/css/basic.css' %}" rel="stylesheet">
+    <style>
 
-      .customGPlusSignIn {
+        .customGPlusSignIn {
             cursor: pointer;
         }
 
         span {
-            font-family: serif;
             font-weight: normal;
         }
 
         span.icon {
-            {#background: url('{% static "/app/btn_google_dark_normal.svg" %}') transparent 5px 50% no-repeat;#}
-            display: inline-block;
+        {#background: url('{% static "/app/btn_google_dark_normal.svg" %}') transparent 5px 50% no-repeat;#} display: inline-block;
             vertical-align: middle;
             width: 48px;
             height: 42px;
         }
-
-        .buttonText {
-            display: inline-block;
-            vertical-align: middle;
-            font-size: 24px;
-            font-weight: bold;
-            /* Use the Roboto font that is loaded in the <head> */
-            font-family: 'Roboto', sans-serif;
-        }
-</style>
+    </style>
 </head>
 <body id="page-top">
- <div id="wrapper">
-{% include "WebApp/common.html" %}
-             <div id="content-wrapper" class="d-flex flex-column">
-
+    <div id="wrapper">
+        {% include "WebApp/common.html" %}
+        <div id="content-wrapper" class="d-flex flex-column">
             <!-- Main Content -->
             <div id="content">
-
-                   {% include "WebApp/topbar.html" %}
-                <!-- End of Topbar -->
-
+                {% include "WebApp/topbar.html" %}
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-
                     <!-- Page Heading -->
                     <div class="align-items-center justify-content-between">
-            <img class="img-fluid"  src="{% static '/images/hero.jpg' %}">
-
+                        <img class="img-fluid" src="{% static '/images/hero.jpg' %}">
                     </div>
-
-
                     <!-- Content Row -->
                     <div class="row">
-
-
-
                         <div class="col-lg-12 mb-4">
-
                             <!-- Illustrations -->
                             <div class="card shadow mb-4">
-
                                 <div class="card-header py-3">
                                     <h6 class="m-0 font-weight-bold text-primary">Description</h6>
                                 </div>
-
                                 <div class="card-body">
                                     <div class="text-center">
-
                                     </div>
                                     <p>This is a project about</p>
-
                                     <p>This project helps</p>
                                 </div>
                             </div>
-
-                            <!-- Approach -->
-
-
                         </div>
                     </div>
 
                 </div>
-                <!-- /.container-fluid -->
-
             </div>
             <!-- End of Main Content -->
-
             <!-- Footer -->
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
 
-                                    <img src="{% static 'images/nasa.png' %}" width="120" height="90" style="padding: 10px">
-                                    <img src="{% static 'images/usaid.png' %}"  width="120" height="90" style="padding: 10px">
-                                    <img src="{% static 'images/SERVIR_flat_color.png' %}"  width="120" height="90" style="padding: 10px">
-
-
-
+                        <img src="{% static 'images/nasa.png' %}" width="120" height="90" style="padding: 10px">
+                        <img src="{% static 'images/usaid.png' %}" width="120" height="90" style="padding: 10px">
+                        <img src="{% static 'images/SERVIR_flat_color.png' %}" width="120" height="90"
+                             style="padding: 10px">
                     </div>
                 </div>
             </footer>
             <!-- End of Footer -->
-
         </div>
         <!-- End of Content Wrapper -->
-
     </div>
     <!-- End of Page Wrapper -->
-
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
     </a>
-     <script src="{% static '/js/sidebar.js' %}"></script>
-
+    <script src="{% static '/js/sidebar.js' %}"></script>
 </body>
-
 </html>
