--- a/templates/WebApp/login.html
+++ b/templates/WebApp/login.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
-
-
 <head>
 {% load socialaccount %}
     <meta charset="utf-8">
@@ -10,9 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>SERVIR AppTemplate</title>
-
     <!-- Custom fonts for this template-->
     <link href="{% static '/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -21,44 +17,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/data.js"></script>
-    <script src="https://code.highcharts.com/modules/series-label.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
-          integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
-            integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
-    <!-- Custom styles for this template-->
+    <!-- Custom styles-->
     <link href="{% static '/css/basic.css' %}" rel="stylesheet">
-
 </head>
 <body id="page-top">
-<div id="wrapper">
-    {% include "WebApp/common.html" %}
-    <!-- Content Wrapper -->
-    <div id="content-wrapper" class="d-flex flex-column">
-
-        <!-- Main Content -->
-        <div id="content">
-            {% include "WebApp/topbar.html" %}
-            <div class="container-fluid">
-                <div class="row">
-                    {% if user.is_authenticated %}
-                        <p>Welcome, {{ user.username }} !</p>
-                        <p><a href="/accounts/logout/">Log Out</a></p>
-                    {% else %}
-                        <h1>My Google Login Project</h1>
-                        <a href="{% provider_login_url 'google' %}">Login with Google</a>
-                    {% endif %}
+    <div id="wrapper">
+        {% include "WebApp/common.html" %}
+        <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+            <!-- Main Content -->
+            <div id="content">
+                {% include "WebApp/topbar.html" %}
+                <div class="container-fluid">
+                    <div class="row">
+                        {% if user.is_authenticated %}
+                            <p>Welcome, {{ user.username }} !</p>
+                            <p><a href="/accounts/logout/">Log Out</a></p>
+                        {% else %}
+                            <h1>My Google Login Project</h1>
+                            <a href="{% provider_login_url 'google' %}">Login with Google</a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-
         </div>
     </div>
-</div>
 </body>
 </html>
