--- a/templates/WebApp/topbar.html
+++ b/templates/WebApp/topbar.html
@@ -1,80 +1,49 @@
 {% load static %}
-
-
 {% load socialaccount %}
 <nav class="navbar navbar-expand navbar-light bg-white topbar static-top shadow">
-
-                    <!-- Sidebar Toggle (Topbar) -->
-                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                        <i class="fa fa-bars"></i>
-                    </button>
-
-<h1>Project Title</h1>
-
-                    <!-- Topbar Navbar -->
-                    <ul class="navbar-nav ml-auto">
-
-                        <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-                        <li class="nav-item dropdown no-arrow d-sm-none">
-                            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-search fa-fw"></i>
-                            </a>
-                            <!-- Dropdown - Messages -->
-                            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
-                                aria-labelledby="searchDropdown">
-                                <form class="form-inline mr-auto w-100 navbar-search">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control bg-light border-0 small"
-                                            placeholder="Search for..." aria-label="Search"
-                                            aria-describedby="basic-addon2">
-                                        <div class="input-group-append">
-                                            <button class="btn btn-primary" type="button">
-                                                <i class="fas fa-search fa-sm"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </li>
-
-
-                        <div class="topbar-divider d-none d-sm-block"></div>
-
-                        <!-- Nav Item - User Information -->
-                        <li class="nav-item dropdown no-arrow">
-
-
-                        {% if user.is_authenticated %}
-                            <p>Welcome, {{ user.username }} !</p>
-                            <p><a href="/accounts/logout/">Log Out</a></p>
-                        {% else %}
-                            <a href="{% provider_login_url 'google' %}">Login with Google</a>
-                        {% endif %}
-
-{#                            <!-- Dropdown - User Information -->#}
-{#                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"#}
-{#                                aria-labelledby="userDropdown">#}
-{#                                <a class="dropdown-item" href="#">#}
-{#                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>#}
-{#                                    Profile#}
-{#                                </a>#}
-{#                                <a class="dropdown-item" href="#">#}
-{#                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>#}
-{#                                    Settings#}
-{#                                </a>#}
-{#                                <a class="dropdown-item" href="#">#}
-{#                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>#}
-{#                                    Activity Log#}
-{#                                </a>#}
-{#                                <div class="dropdown-divider"></div>#}
-{#                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">#}
-{#                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>#}
-{#                                    Logout#}
-{#                                </a>#}
-{#                            </div>#}
-                        </li>
-
-                    </ul>
-
-                </nav>
+    <!-- Sidebar Toggle (Topbar) -->
+    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+        <i class="fa fa-bars"></i>
+    </button>
+    <h1>Project Title</h1>
+    <!-- Topbar Navbar -->
+    <ul class="navbar-nav ml-auto">
+        <!-- Nav Item - Search Dropdown (Visible Only XS) -->
+        <li class="nav-item dropdown no-arrow d-sm-none">
+            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
+               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-search fa-fw"></i>
+            </a>
+            <!-- Dropdown - Messages -->
+            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
+                 aria-labelledby="searchDropdown">
+                <form class="form-inline mr-auto w-100 navbar-search">
+                    <div class="input-group">
+                        <input type="text" class="form-control bg-light border-0 small"
+                               placeholder="Search for..." aria-label="Search"
+                               aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="button">
+                                <i class="fas fa-search fa-sm"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </li>
+        <div class="topbar-divider d-none d-sm-block"></div>
+        <!-- Nav Item - User Information -->
+        <li class="nav-item dropdown no-arrow">
+            {% if user.is_authenticated %}
+                <div id="welcome_block">Welcome, {{ user.username }} !</div>
+                <p><a class="btn btn-outline-secondary btn-sm" href="/accounts/logout/">Log Out</a></p>
+            {% else %}
+                <a class="btn btn-outline-dark" href="{% provider_login_url 'google' %}">
+                    <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in"
+                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png"/>
+                    Login with Google
+                </a>
+            {% endif %}
+        </li>
+    </ul>
+</nav>
