--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -61,25 +61,23 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Team</h6>
                                 </div>
                                 <div class="card-body text-center">
-                                    <div>
-                                        <ul class="list-group list-group-horizontal">
-                                            <li class="list-group-item">
+                                    <div class="row row-centered pos">
+                                            <div class="col-sm-3">
                                                 <div><img src="" alt="img1" class="img-thumbnail">
                                                     <p>Team member 1</p></div>
-                                            </li>
-                                            <li class="list-group-item">
+                                            </div>
+                                            <div class="col-sm-3">
                                                 <div><img src="" alt="img1" class="img-thumbnail">
                                                     <p>Team member 2</p></div>
-                                            </li>
-                                            <li class="list-group-item">
+                                            </div>
+                                            <div class="col-sm-3">
                                                 <div><img src="" alt="img1" class="img-thumbnail">
                                                     <p>Team member 3</p></div>
-                                            </li>
-                                            <li class="list-group-item">
+                                            </div>
+                                            <div class="col-sm-3">
                                                 <div><img src="" alt="img1" class="img-thumbnail">
                                                     <p>Team member 4</p></div>
-                                            </li>
-                                        </ul>
+                                            </div>
                                     </div>
                                 </div>
                             </div>
