--- a/templates/WebApp/update_datamodel.html
+++ b/templates/WebApp/update_datamodel.html
@@ -22,41 +22,41 @@
     <script src="{% static '/js/ajax_calls.js' %}"></script>
 </head>
 <body id="page-top">
-    <div id="wrapper">
-        {% include "WebApp/common.html" %}
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-            <!-- Main Content -->
-            <div id="content">
-                {% include "WebApp/topbar.html" %}
-                <div class="container-fluid">
-                    <div class="row">
-                        <form class="needs-validation" id="updateForm" onsubmit="update_model();">
-                            <div class="form-row">
-                                <div class="col-md-4 mb-3">
-                                    <label for="validationTooltip01">Organization Id</label>
-                                    <input type="text" class="form-control" id="orgId" placeholder="Enter Organization Id"
-                                           required>
-                                    <div class="valid-tooltip">
-                                        Looks good!
-                                    </div>
-                                </div>
-                                <div class="col-md-4 mb-3">
-                                    <label for="validationTooltip02">Organization Name</label>
-                                    <input type="text" class="form-control" id="orgName"
-                                           placeholder="Enter Organization Name" required>
-                                    <div class="valid-tooltip">
-                                        Looks good!
-                                    </div>
+<div id="wrapper">
+    {% include "WebApp/common.html" %}
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
+        <!-- Main Content -->
+        <div id="content">
+            {% include "WebApp/topbar.html" %}
+            <div class="container-fluid">
+                <div class="row">
+
+                    {% if user.is_authenticated %}
+                        {% block content %}
+                            <h2>Add New Measurement</h2>
+                            <form method="POST">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <input type="submit" value="Submit">
+                            </form>
+                        {% endblock %}
+                    {% else %}
+                        <div class="row">
+                            <div class="col-lg-12 mb-4">
+                                <div class="card-body text-center">
+                                    <h3>Please login and retry loading this page.</h3>
                                 </div>
                             </div>
-                            <button id="update_record" class="btn btn-primary">Submit form</button>
-                        </form>
-                        <script src="{% static '/js/update_datamodel.js' %}"></script>
-                    </div>
+                        </div>
+                    {% endif %}
+
+
+                    <script src="{% static '/js/update_datamodel.js' %}"></script>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
