fixed logo, title

--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -30,7 +30,7 @@
 </head>
 <body id="page-top">
     <div id="wrapper">
-        {% include "WebApp/common.html" %}
+        {% include "WebApp/sidebar.html" %}
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
             <!-- Main Content -->
