--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -39,7 +39,7 @@
 </head>
 <body id="page-top">
     <div id="wrapper">
-        {% include "WebApp/common.html" %}
+        {% include "WebApp/sidebar.html" %}
         <div id="content-wrapper" class="d-flex flex-column">
             <!-- Main Content -->
             <div id="content">
