--- a/templates/WebApp/topbar.html
+++ b/templates/WebApp/topbar.html
@@ -1,11 +1,11 @@
 {% load static %}
 {% load socialaccount %}
-<nav class="navbar navbar-expand navbar-light bg-white topbar static-top shadow">
+<nav class="navbar navbar-expand navbar-light bg-white topbar static-top shadow mb-4">
     <!-- Sidebar Toggle (Topbar) -->
     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
         <i class="fa fa-bars"></i>
     </button>
-    <h1>Project Title</h1>
+    <h1>SERVIR App Template</h1>
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
