--- a/templates/WebApp/sidebar.html
+++ b/templates/WebApp/sidebar.html
@@ -16,10 +16,9 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'home' %}">
-        <div class="sidebar-brand-icon rotate-n-15">
-            <img src="{% static 'images/logo.png' %}" width="50" height="50">
+        <div class="sidebar-brand-icon">
+            <img src="{% static 'images/Servir_Logo_Flat_Color_Stacked_Small.png' %}" width="70%">
         </div>
-        <div class="sidebar-brand-text mx-3">SERVIR App Template</div>
     </a>
     <!-- Divider -->
     <hr class="sidebar-divider my-0">
